--- a/src/components/Navbar/Navbar.module.scss
+++ b/src/components/Navbar/Navbar.module.scss
@@ -9,6 +9,10 @@
 		align-items: center;
 		font-size: 2.5rem;
 	}
+	svg {
+		font-size: 3rem;
+		color: #fff
+	}
 }
 
 .nav {
@@ -23,7 +27,10 @@
 		padding: 20px;
 		a {
 			display: block;
-			padding: .5rem 1rem
+			padding: .5rem 1rem;
+			color: #254e39;
+			font-family: ratiomodern,serif;
+			font-size: 1.125rem;
 		}
 	}
 }
