--- a/src/components/About/About.module.scss
+++ b/src/components/About/About.module.scss
@@ -1,5 +1,6 @@
 .section-about {
 	text-align: center;
+	margin: 100px auto;
 	h2 {
 		font-family: ratiomodern,serif;
 		text-transform: capitalize;
@@ -16,4 +17,15 @@
 		margin-top: 1rem;
 		border-top: 1px solid rgba(0,0,0,.1);
 	}
+	p {
+		font-family: acumin-pro,sans-serif;
+		font-weight: 400;
+		font-style: normal;
+	}
+}
+
+.section-pattern {
+	width: 100%;
+	height: 200px;
+	margin: 100px 0;
 }
