hr centered on about component

--- a/src/components/About/About.module.scss
+++ b/src/components/About/About.module.scss
@@ -13,8 +13,7 @@
 		background: #b9b6b6;
 		border-color: #b9b6b6;
 		max-width: 22%;
-		margin-bottom: 40px;
-		margin-top: 1rem;
+		margin: 40px auto;
 		border-top: 1px solid rgba(0,0,0,.1);
 	}
 	p {
