--- a/src/components/About/About.module.scss
+++ b/src/components/About/About.module.scss
@@ -13,13 +13,15 @@
 		background: #b9b6b6;
 		border-color: #b9b6b6;
 		max-width: 22%;
-		margin: 40px auto;
+		margin: 1rem auto 40px;
 		border-top: 1px solid rgba(0,0,0,.1);
 	}
 	p {
 		font-family: acumin-pro,sans-serif;
 		font-weight: 400;
 		font-style: normal;
+		font-size: 20px;
+		color: #707070;
 	}
 }
 
