--- a/src/components/Layout/Layout.module.scss
+++ b/src/components/Layout/Layout.module.scss
@@ -12,4 +12,16 @@
 		left: 2.8125rem;
 		height: 70px;
 	}
+	hr {
+		background: #b9b6b6;
+		border-color: #b9b6b6;
+		max-width: 22%;
+		border-width: 2px;
+		margin: 1rem auto 40px;
+	}
+	h1,h2,h3,h4 {
+		text-transform: capitalize;
+		font-family: ratiomodern,serif;
+		color: #254e39;
+	}
 }
